@@ -10,5 +10,6 @@ endif
 
 libc_la_SOURCES = \
 	src/ctype.c \
+	src/errno.c \
 	src/stdlib.c \
 	src/string.c
