@@ -1,5 +1,6 @@
 nobase_include_HEADERS = \
 	ctype.h \
+	errno.h \
 	inttypes.h \
 	stdlib.h \
 	string.h \
