@@ -1,0 +1,16 @@
+#ifndef _ERRNO_H
+#define _ERRNO_H 1
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#define ERANGE 1
+
+extern int errno;
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
