@@ -1,3 +1,7 @@
+2022-06-12  Alex Kotov  <kotovalexarian@gmail.com>
+
+	* libc/include/errno.h: Added
+
 2022-06-10  Alex Kotov  <kotovalexarian@gmail.com>
 
 	* libc/include/string.h: Add funcs "memchr", "strcat", "strncat", "strchr"
